STORY KNOWAGE-2817: As a final user editing the cockpit I want to see a correct background aligned with the widget modifications https://production.eng.it/jira/browse/KNOWAGE-2817

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -581,10 +581,10 @@
 			width: calc(100% - 20px);
 		}
 		&.cockpitEditMode{
-			background-size:40px 10px;
+			background-size:30px 30px;
 			min-height: 100% !important;
 			border: $cockpitDefaultBorder;
-			background-image:repeating-linear-gradient(0deg, #e2e2e2, #e2e2e2 1px, transparent 1px, transparent 40px), repeating-linear-gradient(-90deg, #e2e2e2, #e2e2e2 1px, transparent 1px, transparent 10px);
+			background-image:repeating-linear-gradient(0deg, #e2e2e2, #e2e2e2 1px, transparent 1px, transparent 30px), repeating-linear-gradient(-90deg, #e2e2e2, #e2e2e2 1px, transparent 1px, transparent 30px);
 			.showActionButtonHandler {
 				opacity: .4 !important;
 			}
